--- a/tuMejorOpcion.web/src/main/webapp/index.html
+++ b/tuMejorOpcion.web/src/main/webapp/index.html
@@ -57,7 +57,7 @@
         <script src="js/agency.js"></script>
 
 
-
+        <div id="fb-root"></div>
 
         <script>
             (function (d, s, id) {
