--- a/tuMejorOpcion.web/src/main/webapp/index.html
+++ b/tuMejorOpcion.web/src/main/webapp/index.html
@@ -8,10 +8,14 @@
         <link rel="stylesheet" href="css/animations.css">
 
         <script src="bower_components/jquery/jquery.js"></script>
+        <script src="https://apis.google.com/js/client:platform.js"></script>
+        <script src="https://apis.google.com/js/client:plusone.js"></script>
         <script src="bower_components/angular/angular.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-cookies.js"></script>
         <script src="bower_components/angular-animate/angular-animate.js"></script>
         <script src="bower_components/angular-route/angular-route.js"></script>
         <script src="bower_components/angular-resource/angular-resource.js"></script>
+        <script src="directives/google-plus-signin.js"></script>
         <script src="js/app.js"></script>
         <script src="js/loginController.js"></script>
         <script src="js/friendsController.js"></script>
@@ -46,7 +50,7 @@
                     return;
                 js = d.createElement(s);
                 js.id = id;
-                js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&appId=556643921127827&version=v2.0";
+                js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&appId=556643921127827&version=v2.0&cookie=1";
                 fjs.parentNode.insertBefore(js, fjs);
             }(document, 'script', 'facebook-jssdk'));
         </script>
